--- a/front/src/components/Shop/Product/Product.css
+++ b/front/src/components/Shop/Product/Product.css
@@ -1,7 +1,7 @@
 .productTemplate {
+    position: relative;
     height: 446px;
     width: 285px;
-    cursor: pointer;
 }
 
 .productImg {
@@ -19,18 +19,54 @@
 }
 
 .productProperties h1, .productProperties h2, .productProperties p {
-    height: 40px;
-    margin-left: 30px;
+    height: 1px;
+    margin-left: 15px;
     color: #3A3A3A;
 }
 
 .productProperties h1 {
+    width: 250px;
     font-size: 24px;
     font-weight: 500;
+    padding-bottom: 30px;
 }
 
 .productProperties h2 { 
     font-size: 16px;
     font-weight: 400;
     color: #898989;
+    margin-top: 40px;
+}
+
+.productProperties p {
+    color: #B88E2F;
+    margin-top: 20px;
+}
+
+.details {
+    position: absolute;
+    top: 0;
+    height: 446px;
+    width: 285px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    text-align: center;
+    color: white;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.details:hover {
+    opacity: 1;
+}
+
+.seeDetails {
+    height: 48px;
+    width: 202px;
+    background-color: #FFFFFF;
+    color: #B88E2F;
+    border: none;
+    font-weight: 600;
+    margin-top: 170px;
+    cursor: pointer;
 }
