--- a/front/src/components/Header/Header.css
+++ b/front/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-header ul, li, li a {
+header ul, header li, header li a {
     text-decoration: none;
     list-style-type: none;
     color: black;
