--- a/front/src/components/Footer/Footer.css
+++ b/front/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 footer {
     background-color: #F9F1E7;
-    height: 450px;
+    height: 300px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 70px 70px 0 70px;
 }
@@ -39,6 +39,3 @@ footer h2 {
     font-size: 16px;
     font-weight: 400;
 }
-
-
-
