--- a/front/src/components/Shop/Products/Products.css
+++ b/front/src/components/Shop/Products/Products.css
@@ -13,3 +13,23 @@
     margin: 0 auto;
     padding-top: 80px;
 }
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .pagination button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    background-color: #F4F5F7;
+    border: 1px solid #9F9F9F;
+    cursor: pointer;
+  }
+  
+  .pagination button:disabled {
+    background-color: #D3D3D3;
+    cursor: not-allowed;
+  }
+  
