--- a/front/src/components/Shop/Products/Products.css
+++ b/front/src/components/Shop/Products/Products.css
@@ -1,7 +1,26 @@
 .filters {
     height: 100px;
     background-color: #F9F1E7;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .filters button {
+    padding: 10px 20px;
+    margin: 10px;
+    background-color: #F7F7F7;
+    border: 1px solid #9F9F9F;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .filters button:hover {
+    background-color: #B88E2F;
+    color: white;
+  }
 
 .products {
     display: grid;
