--- a/front/src/components/UniqueProduct/UniqueProduct.css
+++ b/front/src/components/UniqueProduct/UniqueProduct.css
@@ -74,3 +74,12 @@
     border: 1px solid #9F9F9F;
     cursor: pointer;
 }
+
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+    width: 100%; 
+}
+  
